# NovusTimeServerConfig

./: README.md
nts/: PtpGmNtpServer.ucm  bcomms.py  communication.py  config.json  config_output.txt  nts.conf  nts.py  pyproject.toml  requirements.txt  serial-tester.py  test.py
